# Differential-Privacy-Hyperdimensional-Computing

./: .gitignore  Inference_Privacy.ipynb  LICENSE  README.md  Training_Privacy.ipynb  pyproject.toml  requirements.txt
data/: README.md
notebooks/: 01_training_privacy.ipynb  02_inference_privacy.ipynb
scripts/: run_inference_privacy.py  run_snr_analysis.py  run_training_privacy.py
src/dphd/: __init__.py  data.py  decoder.py  encoding.py  inference_privacy.py  model.py  plotting.py  privacy.py  utils.py
