[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "dphd"
version = "1.0.0"
description = "Differential Privacy-Hyperdimensional Computing (DP-HD)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Fardin Jalil Piran", email = "fardin.jalil_piran@uconn.edu" }]
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
]

[project.urls]
Paper = "https://doi.org/10.1016/j.engappai.2025.110282"
Repository = "https://github.com/FardinJalilPiran/Differential-Privacy-Hyperdimensional-Computing"

[tool.setuptools.packages.find]
where = ["src"]
